<resources>
    <string name="app_name">PoinCareClub</string>
    <string name="added_tipp">Tipp Added</string>
    <string name="error">%1$s</string>
    <string name="poincare_club">Poincare Club</string>
    <string name="the_official_app">The Official App</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="register_user">Register User</string>
    <string name="add_button">Add Button</string>
    <string name="add_new_tipp">Add new record</string>
    <string name="add_new_tip">Add new record</string>
    <string name="add_tipp_for_the_event">Add tipp for the event</string>
    <string name="save">Save</string>
    <string name="event_name">Event Name</string>
    <string name="prediction">Prediction</string>
    <string name="edit_record">Edit record</string>
    <string name="save_changes">Save changes</string>
    <string name="odds">Odds</string>
    <string name="bankroll">Bankroll</string>
    <string name="type">Type</string>
    <string name="back_button">Back Button</string>
    <string name="logo_of_poincare">Logo of Poincare</string>
    <string name="log_out">Log Out</string>
    <string name="poincare_club_logo">Poincare Club Logo</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="edit_button">Edit Button</string>
    <string name="event_name_pre">Event Name:</string>
    <string name="prediction_pre">Prediction:</string>
    <string name="odds_pre">Odds:</string>
    <string name="bankroll_pre">Bankroll:</string>
    <string name="type_pre">Type:</string>
</resources>