<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/before_text_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/primary"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="14dp"
            android:text="@string/event_name_pre"
            />

        <TextView
            android:id="@+id/text_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/primary"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/before_text_event"
            android:text="@string/event_name"
            />

        <TextView
            android:id="@+id/before_text_tipp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/secondary"
            android:text="@string/prediction_pre"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/text_event"
            />

        <TextView
            android:id="@+id/text_tipp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/secondary"
            android:text="@string/prediction"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/text_event"
            android:layout_toEndOf="@+id/before_text_tipp"
            />

        <TextView
            android:id="@+id/before_text_odds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/secondary"
            android:text="@string/odds_pre"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/text_tipp"
            />

        <TextView
            android:id="@+id/text_odds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/secondary"
            android:text="@string/odds"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/text_tipp"
            android:layout_toEndOf="@+id/before_text_odds"
            />

        <TextView
            android:id="@+id/before_text_bankroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/secondary"
            android:text="@string/bankroll_pre"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/text_odds"
            />

        <TextView
            android:id="@+id/text_bankroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/secondary"
            android:text="@string/bankroll"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/text_odds"
            android:layout_toEndOf="@+id/before_text_bankroll"
            />

        <TextView
            android:id="@+id/before_text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/secondary"
            android:text="@string/type_pre"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/text_bankroll"
            />

        <TextView
            android:id="@+id/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/secondary"
            android:text="@string/type"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/text_bankroll"
            android:layout_toEndOf="@+id/before_text_type"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/text_event"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/edit_button"
            android:src="@drawable/ic_edit"
            android:tint="@color/black"
            app:backgroundTint="@color/primary"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_Button"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/edit_button"
            android:src="@drawable/ic_baseline_delete_24"
            app:backgroundTint="@color/primary"
            app:backgroundTintMode="add" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/secondary"
        />
</LinearLayout>